--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       - "./db:/docker-entrypoint-initdb.d" # this is how we persist a sql db even when container stops
   www:
     image: php:apache
-    build: ./www
     volumes:
       - "./:/var/www/html" # sync the current dir on local machine to the dir of container
     ports:
       - 80:80
       - 443:443 # for future ssl traffic
+    command: /bin/sh -c "docker-php-ext-install mysqli pdo_mysql && apache2-foreground"
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
