--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -5,14 +5,13 @@ services:
     environment:
       - MYSQL_DATABASE=police_ops
       - MYSQL_USER=fritz.furittsu
-      - MYSQL_PASSWORD=CanNeverGu355Th15Passw0rD # this should live in a env var
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1 # equivalent to True
+      - MYSQL_PASSWORD=CanNeverGu355Th15Passw0rD 
     volumes:
-      - "./db:/docker-entrypoint-initdb.d" # this is how we persist a sql db even when container stops
+      - "./db:/docker-entrypoint-initdb.d"
   www:
     image: php:apache
     volumes:
-      - "./:/var/www/html" # sync the current dir on local machine to the dir of container
+      - "./web:/var/www/html"
     ports:
       - 80:80
       - 443:443 # for future ssl traffic
