--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -14,8 +14,15 @@ services:
       - "./web:/var/www/html"
     ports:
       - 80:80
-      - 443:443 # for future ssl traffic
     command: /bin/sh -c "docker-php-ext-install mysqli pdo_mysql && apache2-foreground"
+  nginx:
+    image: nginx:latest
+    volumes:
+      - "./nginx.conf:/etc/nginx/conf.d/default.conf"
+    ports:
+      - 80:80
+    depends_on:
+      - www
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
